--- a/less/main/theme.less
+++ b/less/main/theme.less
@@ -18,11 +18,10 @@ html, body {
 	padding: 0;
     background-color: @color__body--background;
 	text-shadow: 1px 1px 1px rgba(0,0,0,0.004);
-	font-smooth: always;
-	font-smoothing: antialiased;
-	-moz-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
-	-webkit-font-smoothing: antialiased;
+	font-smooth: antialiased;
+	-moz-font-smooth: antialiased;
+	-webkit-font-smooth: antialiased;
+	-moz-osx-font-smooth: grayscale;
 	text-rendering: geometricPrecision;
     width: -webkit-calc(100% - 0px);
 }
