#375 Integrating iphone and ipad LESS - Creating responsive variables.

--- a/less/widgets/language-selector.less
+++ b/less/widgets/language-selector.less
@@ -339,7 +339,7 @@
 		text-overflow: ellipsis;
 		
 		.language-selector--flag-text& {
-			@media only screen and (max-width: 380px) {
+			@media @mobile-small {
 				display: none;
 			}
 		}
