#387 The embed is gray in the preview

--- a/less/widgets/embeds.less
+++ b/less/widgets/embeds.less
@@ -36,6 +36,14 @@
 
 // Embeds
 
+.widget.embed .embed-default,
+.widget .embed .embed-wrap {
+	background: transparent;
+	border: none;
+	padding: 0;
+	text-align: left;
+}
+
 .embed-content iframe {
 	max-width: 100%;
 }
