#389 If a span is in a button it does not have the button text color

--- a/less/widgets/buttons.less
+++ b/less/widgets/buttons.less
@@ -77,9 +77,11 @@ a.link-button,
 		line-height: 1em;
 		font-weight: 400;
 	}
+
 	&:before {
 		margin-right: 0.5em;
 	}
+
 	&:after {
 		margin-left: 0.5em;
 	}
@@ -222,6 +224,22 @@ a.link-button,
 		font-size: 1.2em;
 		display: block;
 	}
+}
+
+.widget button.btn span {
+	color: @font-swatch7-color;
+
+	.style--light & {
+		color: @contrast--accent;
+	}
+
+	.style--accent & {
+		color: @contrast--dark;
+	}
+
+	.style--dark & {
+		color: @contrast--accent;
+	} 
 }
 
 // The name of the button is not displayed.
