--- a/less/main/messages.less
+++ b/less/main/messages.less
@@ -31,7 +31,7 @@
 		line-height: @font__h3--line-height;
 		margin-top: 0;
 		margin-bottom: 0.5em;
-		color: #fff;
+		color: @color-swatch1;
 	}
 	
 	p {
@@ -39,7 +39,7 @@
 		font-family: @font__p--font-family;
 		line-height: @font__p--line-height;
 		font-size: @font__p--font-size;
-		color: #fff;
+		color: @color-swatch1;
 		
 		.make-font-a-little-smaller(@font__p--font-size);
 		.make-font-smaller(@font__p--font-size);
@@ -77,7 +77,7 @@
 		font-size: 1.4em;
 		line-height: 1.4em;
 		.border-radius(50%);
-		color: #fff;
+		color: @color-swatch1;
     }
 }
 
@@ -170,10 +170,10 @@
 	
 	p, a {
 		.paragraph;
-		color: #fff;
+		color: @color-swatch1;
 		
 		&, &:hover {
-			color: #fff;
+			color: @color-swatch1;
 		}
 	}
 	
@@ -185,7 +185,7 @@
 	p a {
 		margin: 0 0.25em;
 		padding: 0 0.1em;
-		color: #fff;
+		color: @color-swatch1;
 		white-space: nowrap;
 	}
 	
