#397 Add styling to the user registration form

--- a/less/widgets/buttons.less
+++ b/less/widgets/buttons.less
@@ -8,6 +8,7 @@ a.button,
 a.link-button,
 .tweet .button,
 .clicktocall .phone-number-link,
+.userregistration fieldset .userregistrationbtn,
 a.ecomproduct__button {
     cursor: pointer;
     position: relative;
