#397 Add styling to the user registration form

--- a/less/widgets/forms.less
+++ b/less/widgets/forms.less
@@ -41,7 +41,7 @@
 
 // Text Inputs
 
-.input,
+input,
 input[type="search"],
 input[type="email"],
 input[type="password"],
@@ -53,7 +53,7 @@ select {
 	height: 50px;
 }
 
-.input,
+input,
 input[type="search"],
 input[type="email"],
 input[type="password"],
