#397 Add styling to the user registration form

--- a/less/widgets/forms.less
+++ b/less/widgets/forms.less
@@ -445,7 +445,7 @@ input:focus {
 
 // Registration Form
 
-.widget.userregistration {
+.widget__userregistration {
 	fieldset {
 		margin: 0 auto;
 		padding: 0;
