--- a/less/widgets/yelp-review.less
+++ b/less/widgets/yelp-review.less
@@ -42,17 +42,8 @@
 			line-height: 1.5em;
 		}
 		.review-link {
-			a;
+			.link;
 			padding: 0 !important;
-			font-size: @font__p--font-size;
-
-			.make-font-a-little-smaller(@font__p--font-size);
-			.make-font-smaller(@font__p--font-size);
-			.make-font-a-lot-smaller(@font__p--font-size);
-	
-			.make-line-height-a-little-smaller(@font__p--line-height);
-			.make-line-height-smaller(@font__p--line-height);
-			.make-line-height-a-lot-smaller(@font__p--line-height);
 		}
 	}
 
