--- a/less/main/mixins.less
+++ b/less/main/mixins.less
@@ -241,6 +241,10 @@
 		width: 100%;
 		margin: @item--margin-size*2 @item--margin-size;
     }
+
+    .responsivecolumns & {
+		width: 100%;
+    }
 	
 	&:last-child {
 		margin-bottom: @item--margin-size;
