--- a/less/main/mixins.less
+++ b/less/main/mixins.less
@@ -230,12 +230,14 @@
 // Theme Mixins
 
 .item--margin-size--border(@item--margin-size: 1%) {
-	margin: -@item--margin-size;
+	margin-left: -@item--margin-size;
+	margin-right: -@item--margin-size;
 }
 
 .item--margin-size--2to1-cols(@item--margin-size: 1%) {
 	width: 100%/2-@item--margin-size*2;
-	margin: @item--margin-size;
+	margin-left: @item--margin-size;
+	margin-right: @item--margin-size;
 	
     @media @mobile {
 		width: 100%;
@@ -244,11 +246,8 @@
 
     .responsivecolumns & {
 		width: 100%;
+		margin: @item--margin-size*2 @item--margin-size;
     }
-	
-	&:last-child {
-		margin-bottom: @item--margin-size;
-	}
 }
 
 // Widget Mixins
