#410 Add mobile styling to product and shopping cart buttons

--- a/less/plugins/ecommerce/ecommerce-basket-summary.less
+++ b/less/plugins/ecommerce/ecommerce-basket-summary.less
@@ -296,13 +296,18 @@
     }
 }
 
-.ecombasketsummary{
+.ecombasketsummary {
 	.continue-shopping {
-		.button;
-		
-		+ .ecombasketsummary__button {
+		&,
+		& + .ecombasketsummary__button {
+			.button;
 			margin-top: 0;
 			margin-left: 0.5em;
+			
+			@media @mobile {
+				width: 100%;
+				text-align: center;
+			}
 		}
 	}
 }
