--- a/less/plugins/ecommerce/ecommerce-product.less
+++ b/less/plugins/ecommerce/ecommerce-product.less
@@ -343,12 +343,24 @@ a.ecomproduct__button {
         display: inline-block;
         min-width: 100px;
         margin: 0 0.6em 0 0;
-        float: left;
 		
 		@media @tablet {
 			float: none;
 			margin: 0;
 			width: 100%;
+		}
+		
+		.ecomproduct__button {
+			margin-bottom: 1em;
+			text-align: center;
+			
+			@media @mobile {
+				width: 100%;
+			}
+		
+			&:before {
+				float: none;
+			}
 		}
     }
 }
