--- a/less/widgets/navigation.less
+++ b/less/widgets/navigation.less
@@ -346,6 +346,10 @@ a.companyname {
 		.make-font-a-little-smaller(@font__navigation--font-size);
 		.make-font-smaller(@font__navigation--font-size);
 		.make-font-a-lot-smaller(@font__navigation--font-size);
+	
+		.make-line-height-a-little-smaller(@font__navigation--line-height);
+		.make-line-height-smaller(@font__navigation--line-height);
+		.make-line-height-a-lot-smaller(@font__navigation--line-height);
 		
 		@media @tablet {
 			display: table;
